--- a/fouxenigma.html
+++ b/fouxenigma.html
@@ -4,28 +4,24 @@
     <script src="Reel.js" type="text/ecmascript"></script>
     <script type="text/javascript">
 
-
+			let reel = {};
       $(function(){
-
         //Create character mappings.
-        //const r1 = "WF.LYGAIT9_7PEZSCJMKODHRV83?X205N1UQ64B";
-        //const r2 = "JB6HOAS?RLTF4YE057MG_P81N.XDZIUCV29WKQ3";
-        //const r1 = "ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890._?"
-        //const r2 = "ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890._?"
-        let reel = {};
+        const r1 = "WF.LYGAIT9_7PEZSCJMKODHRV83?X205N1UQ64B";
+        const r2 = "JB6HOAS?RLTF4YE057MG_P81N.XDZIUCV29WKQ3";
 
         $("textarea").prop('disabled',true)
-        $("select").prop('disabled',false)
 
-        $("button[name=build]").click(function(){
-          let r1 = $("select[name=r1]").val();
-          let r2 = $("select[name=r1]").val();
-          reel = new Reel(r1,r2);
-
+				//Rebuild the machine if the key changes
+				$("input[name=key]").keyup(function(){
+					reel = new Reel(r1,r2,$("input[name=key]").val()*1);
+					$("span[name=plain_text]").html(reel.plain_text.join('|'));
+					$("span[name=cypher_text]").html(reel.cypher_text.join('|'));
           $("textarea").prop('disabled',false)
-          $("select").prop('disabled',true)
-          $("button").prop('disabled',true)
-        });
+
+					$("textarea[name=plain_text]").trigger('keyup');
+				});
+
         //Encrypt text as user keys it in
         $("textarea[name=plain_text]").keyup(function(){
           //convert to upper case and replace spaces with underscores
@@ -33,14 +29,14 @@
 
           //TODO: only allow charactes that are present on r1;
 
-          //Get the encryption key
-          let key = $("input[name=key]").val()*1;
-
           //encrypt the plain text
-          let cypher_text = reel.encode(plain_text,key);
+          let cypher_text = reel.encode(plain_text);
 
           //show the user
           $("textarea[name=cypher_text]").val(cypher_text);
+
+					$("span[name=plain_text]").html(reel.plain_text.join('|'));
+					$("span[name=cypher_text]").html(reel.cypher_text.join('|'));
         });
 
         //decrypt text as user keys it in
@@ -50,39 +46,30 @@
 
           //TODO: only allow charactes that are present on r1;
 
-          //get the encryption key
-          let key = $("input[name=key]").val()*1;
-
           //decypt the cypher text
-          let plain_text = reel.decode(cypher_text,key);
+          let plain_text = reel.decode(cypher_text);
 
           //remove underscores and replace with spaces
           plain_text = plain_text.replace(/\_/g, ' ');
 
           //show the user
           $("textarea[name=plain_text]").val(plain_text);
+
+					$("span[name=plain_text]").html(reel.plain_text.join('|'));
+					$("span[name=cypher_text]").html(reel.cypher_text.join('|'));
         });
       });
     </script>
+		<link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    r1:
-    <select type="text" name="r1"/>
-      <option value="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890._?">ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890._?</option>
-      <option value="WF.LYGAIT9_7PEZSCJMKODHRV83?X205N1UQ64B">WF.LYGAIT9_7PEZSCJMKODHRV83?X205N1UQ64B</option>
-      <option value="JB6HOAS?RLTF4YE057MG_P81N.XDZIUCV29WKQ3">JB6HOAS?RLTF4YE057MG_P81N.XDZIUCV29WKQ3</option>
-    </select>
-    r2:
-    <select type="text" name="r2"/>
-      <option value="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890._?">ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890._?</option>
-      <option value="WF.LYGAIT9_7PEZSCJMKODHRV83?X205N1UQ64B">WF.LYGAIT9_7PEZSCJMKODHRV83?X205N1UQ64B</option>
-      <option value="JB6HOAS?RLTF4YE057MG_P81N.XDZIUCV29WKQ3">JB6HOAS?RLTF4YE057MG_P81N.XDZIUCV29WKQ3</option>
-    </select>
     Encryption Key: <input type="number" name="key" min=0, max=9999 value=0/>
-    <button name="build">Build FouxEnigma</button>
     <br>
     <span><b>Plain Text:</b></span><br>
     <textarea name="plain_text" rows="8" cols="80"></textarea>
+		<hr>
+			<span class="pre" name="plain_text"></span>
+			<span class="pre" name="cypher_text"></span>
     <hr>
     <span><b>Cypher Text:</b></span><br>
     <textarea name="cypher_text" rows="8" cols="80"></textarea>
